# odoo

./: pyproject.toml
addons/lumber/: __manifest__.py
addons/lumber/models/: __init__.py  lumber.py  lumber_package.py
addons/lumber/security/: ir.model.access.csv
addons/lumber/tests/: __init__.py  test_lumber.py
addons/lumber/views/: lumber_menu.xml  lumber_view.xml
