[tool.poetry]
name = "odoo"
version = "0.1.0"
description = ""
authors = ["Ben Stannard <ben.stannard@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Babel = "^2.10.1"
chardet = "^4.0.0"
decorator = "^5.1.1"
docutils = "^0.18.1"
ebaysdk = "^2.2.0"
freezegun = "^1.2.1"
gevent = "^21.12.0"
greenlet = "^1.1.2"
idna = "^3.3"
Jinja2 = "^3.1.2"
libsass = "^0.21.0"
lxml = "^4.9.0"
Mako = "^1.2.0"
MarkupSafe = "^2.1.1"
num2words = "^0.5.10"
ofxparse = "^0.21"
passlib = "^1.7.4"
Pillow = "^9.1.1"
polib = "^1.1.1"
psutil = "^5.9.1"
psycopg2 = "^2.9.3"
pydot = "^1.4.2"
pyserial = "^3.5"
python-dateutil = "^2.8.2"
pytz = "^2022.1"
pyusb = "^1.2.1"
qrcode = "^7.3.1"
reportlab = "^3.6.10"
requests = "^2.28.0"
zeep = "^4.1.0"
python-stdnum = "^1.17"
vobject = "^0.9.6"
XlsxWriter = "^3.0.3"
xlwt = "^1.3.0"
xlrd = "^2.0.1"
Werkzeug = "1.0.1"
PyPDF2 = "1.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
